# frida-rust

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  FRIDA_VERSION  README.md  bors.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
examples/: build.rs
examples/core/compile_script/: Cargo.toml  README.md
examples/core/compile_script/src/: main.rs
examples/core/console_log/: Cargo.toml
examples/core/console_log/src/: main.rs
examples/core/get_apps/: Cargo.toml
examples/core/get_apps/src/: main.rs
examples/core/get_process_parameters/: Cargo.toml
examples/core/get_process_parameters/src/: main.rs
examples/core/get_processes/: Cargo.toml
examples/core/get_processes/src/: main.rs
examples/core/hello/: Cargo.toml
examples/core/hello/src/: main.rs
examples/core/inject_lib_blob/: Cargo.toml  README.md
examples/core/inject_lib_blob/src/: lib.rs  main.rs
examples/core/inject_lib_file/: Cargo.toml  README.md
examples/core/inject_lib_file/src/: main.rs
examples/core/list_exports/: Cargo.toml  README.md
examples/core/list_exports/src/: main.rs
examples/core/rpc_execute_function/: Cargo.toml  README.md
examples/core/rpc_execute_function/src/: main.rs
examples/core/usb_device/: Cargo.toml
examples/core/usb_device/src/: main.rs
examples/gum/debug_symbol/: Cargo.toml
examples/gum/debug_symbol/src/: main.rs
examples/gum/fast_interceptor/: Cargo.toml  README.md
examples/gum/fast_interceptor/src/: main.rs
examples/gum/hook_instruction/: Cargo.toml
examples/gum/hook_instruction/src/: lib.rs
examples/gum/hook_open/: Cargo.toml  README.md
examples/gum/hook_open/src/: lib.rs
examples/gum/linux_no_std/: Cargo.toml  build.rs
examples/gum/linux_no_std/src/: main.rs
examples/gum/memory_access_monitor/: Cargo.toml
examples/gum/memory_access_monitor/src/: main.rs
examples/gum/open/: .gitignore  Cargo.toml  package.json  victim.c
examples/gum/open/src/: lib.rs
examples/gum/process_check/: Cargo.toml  README.md
examples/gum/process_check/src/: lib.rs
examples/gum/script/: Cargo.toml  build.rs
examples/gum/script/src/: main.rs  script.js
examples/gum/stalker/: Cargo.toml
examples/gum/stalker/src/: main.rs
examples/gum/stalker_observer/: Cargo.toml  build.rs
examples/gum/stalker_observer/src/: main.rs
examples/open/: Cargo.toml  inject.js
examples/open/src/: lib.rs
examples/stalker/: Cargo.toml
examples/stalker/src/: main.rs
frida/: Cargo.toml  README.md
frida-build/: Cargo.toml
frida-build/src/: lib.rs
frida-gum/: Cargo.toml  README.md
frida-gum-sys/: .gitignore  Cargo.toml  FRIDA_VERSION  build.rs  event_sink.c  event_sink.h  frida-gum.h  instruction_invocation_listener.c  instruction_invocation_listener.h  invocation_listener.c  invocation_listener.h  probe_listener.c  probe_listener.h  stalker_observer.c  stalker_observer.h  stalker_params.c  stalker_params.h
frida-gum-sys/include/: frida-gum.h  frida-gumjs.h
frida-gum-sys/src/: lib.rs
frida-gum/src/: api_resolver.rs  backtracer.rs  cloak.rs  code_allocator.rs  code_segment.rs  control_flow_graph.rs  cpu_context.rs  debug_symbol.rs  elf_module.rs  error.rs  exceptor.rs  glib_compat.rs  instruction_writer.rs  interceptor.rs  lib.rs  memory.rs  memory_access_monitor.rs  memory_range.rs  module.rs  module_map.rs  process.rs  query.rs  range_details.rs  registry.rs  stalker.rs  symbol_util.rs  thread.rs  tls.rs  unwind_broker.rs
frida-gum/src/instruction_writer/: aarch64.rs  arm.rs  x86_64.rs
frida-gum/src/instruction_writer/aarch64/: branch.rs  index.rs  register.rs  relocator.rs  writer.rs
frida-gum/src/instruction_writer/arm/: register.rs  relocator.rs  writer.rs
frida-gum/src/instruction_writer/x86_64/: branch.rs  register.rs  relocator.rs  writer.rs
frida-gum/src/interceptor/: invocation_listener.rs
frida-gum/src/script/: backend.rs  context.rs  data.rs  mod.rs  scheduler.rs
frida-gum/src/stalker/: event_sink.rs  observer.rs  transformer.rs
frida-sys/: .gitignore  Cargo.toml  FRIDA_VERSION  build.rs  frida-core.h
frida-sys/include/: frida-core.h
frida-sys/src/: lib.rs
frida/src/: application.rs  compiler.rs  device.rs  device_manager.rs  error.rs  frida_application.rs  injector.rs  lib.rs  process.rs  script.rs  session.rs  variant.rs
frida/tests/: compile_script.rs  process_parameters.rs
