[workspace]
resolver = "2"
members = [
    "frida-gum-sys",
    "frida-gum",
    "frida-sys",
    "frida",
    "examples/gum/open",
    "examples/gum/stalker",
    "examples/gum/stalker_observer",
    "examples/gum/hook_open",
    "examples/gum/hook_instruction",
    "examples/gum/debug_symbol",
    "examples/gum/fast_interceptor",
    "examples/gum/linux_no_std",
    "examples/gum/memory_access_monitor",
    "examples/core/hello",
    "examples/core/usb_device",
    "examples/core/console_log",
]
# We miss our linux_no_std example from the default members since `cargo check`
# and `cargo test` both attempt to link the `std` library into it in error.
default-members = [
    "frida-gum-sys",
    "frida-gum",
    "frida-sys",
    "frida",
    "examples/gum/open",
    "examples/gum/stalker",
    "examples/gum/stalker_observer",
    "examples/gum/hook_open",
    "examples/gum/hook_instruction",
    "examples/gum/debug_symbol",
    "examples/gum/fast_interceptor",
    "examples/gum/memory_access_monitor",
    "examples/core/hello",
    "examples/core/usb_device",
    "examples/core/console_log",
]
