[package]
name = "frida-build"
version = "0.2.0"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>"]
edition = "2018"
license = "wxWindows"
repository = "https://github.com/meme/frida-rust"
description = "Build support for Frida Rust bindings"

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
xz = "0.1.0"
tar = "0.4.33"
