[package]
name = "frida-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
reqwest = { version = "0.12.2", default-features=false, features = ["blocking", "rustls-tls"] }
tar = "0.4.40"
xz = "0.1.0"
