[package]
name = "frida-gum-sys"
version = "0.8.3"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>", "Shmarya Rubenstein <github@shmarya.net>"]
edition = "2018"
license = "wxWindows"
repository = "https://github.com/frida/frida-rust"
description = "Rust generated bindings for Frida Gum"

[features]
auto-download = ["frida-build"]
event-sink = ["cc"]
invocation-listener = ["cc"]
stalker-observer = ["cc"]
stalker-params = ["cc"]

[build-dependencies]
bindgen = "0.69.1"
cc = { version = "1.0", optional = true }
frida-build = { path = "../frida-build", version = "0.2.1", optional = true }

[badges]
maintenance = { status = "experimental" }
