[package]
name = "frida-gum-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true


[features]
auto-download = ["frida-build"]
event-sink = ["cc"]
invocation-listener = ["cc"]
stalker-observer = ["cc"]
stalker-params = ["cc"]

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", optional = true }
frida-build = { path = "../frida-build", optional = true, version = "0.13.7" }

[badges]
maintenance = { status = "experimental" }
