[package]
name = "frida-gum"
version = "0.10.0"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>"]
edition = "2018"
license = "wxWindows"
repository = "https://github.com/frida/frida-rust"
description = "Rust bindings for Frida Gum"

[features]
default = ["thiserror", "no-std-compat/std"]
auto-download = ["frida-gum-sys/auto-download"]
backtrace = ["libc"]
event-sink = ["frida-gum-sys/event-sink"]
invocation-listener = ["frida-gum-sys/invocation-listener"]
nostd = ["frida-gum-sys/nostd", "no-std-compat", "thiserror-no-std", "cstr_core"]
stalker-observer = ["frida-gum-sys/stalker-observer"]
stalker-params = ["frida-gum-sys/stalker-params"]

[dependencies]
frida-gum-sys = { path = "../frida-gum-sys", version = "0.6.0" }
num = { version = "0.3.1", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
paste = { version = "1", default-features = false }
libc = { version = "0.2.93", optional = true, default-features = false }
capstone = { version = "0.11.0", default-features = false }
capstone-sys = { version = "0.15.0", default-features = false }
thiserror = { version = "1", optional = true }
no-std-compat = {version = "0.4.1", optional = true, features = ["alloc"], default-features = false }
thiserror-no-std = {version = "2.0.2", optional = true }
cstr_core = {version = "0.2.6", optional = true, features = ["alloc"], default-features = false }

[dev-dependencies]
lazy_static = "1"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["event-sink", "invocation-listener", "stalker-observer", "stalker-params"]
rustdoc-args = ["--cfg", "doc_cfg"]
