[package]
name = "frida-gum"
version = "0.13.2"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>"]
edition = "2018"
license = "wxWindows"
repository = "https://github.com/frida/frida-rust"
description = "Rust bindings for Frida Gum"

[features]
auto-download = ["frida-gum-sys/auto-download"]
backtrace = ["libc"]
event-sink = ["frida-gum-sys/event-sink"]
invocation-listener = ["frida-gum-sys/invocation-listener"]
module-names = []
stalker-observer = ["frida-gum-sys/stalker-observer"]
stalker-params = ["frida-gum-sys/stalker-params"]

[dependencies]
cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"] }
frida-gum-sys = { path = "../frida-gum-sys", version = "0.8.1" }
libc = { version = "0.2.93", default-features = false, optional = true }
num = { version = "0.3.1", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
paste = { version = "1", default-features = false }

[dev-dependencies]
lazy_static = "1"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["event-sink", "invocation-listener", "stalker-observer", "stalker-params"]
rustdoc-args = ["--cfg", "doc_cfg"]
