[package]
name = "frida-gum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
auto-download = ["frida-gum-sys/auto-download"]
backtrace = ["libc"]
event-sink = ["frida-gum-sys/event-sink"]
invocation-listener = ["frida-gum-sys/invocation-listener"]
memory-access-monitor = []
module-names = []
stalker-observer = ["frida-gum-sys/stalker-observer"]
stalker-params = ["frida-gum-sys/stalker-params"]

[dependencies]
cstr_core = { version = "0.2.6", default-features = false, features = ["alloc"] }
frida-gum-sys = { path = "../frida-gum-sys", version = "0.13.7" }
libc = { version = "0.2.153", default-features = false, optional = true }
num = { version = "0.4.1", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
paste = { version = "1", default-features = false }

[dev-dependencies]
lazy_static = "1"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["event-sink", "invocation-listener", "stalker-observer", "stalker-params"]
