[package]
name = "frida-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
auto-download = ["frida-build"]

[build-dependencies]
bindgen = "0.69.4"
frida-build = { path = "../frida-build", optional = true, version = "0.16.4" }

[badges]
maintenance = { status = "experimental" }
