[package]
name = "hook-instruction"
version = "0.1.0"
authors = ["Tal Liberman <talliberman@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
frida-gum = { path = "../../../frida-gum", features = ["invocation-listener"] }
lazy_static = "1.4"
ctor = "0.2"
