[package]
name = "open"
version = "0.1.0"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>"]
edition = "2018"
license = "wxWindows"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
frida-gum = { path = "../../../frida-gum", features = [
    "invocation-listener",
    "std",
] }
