[package]
name = "stalker-observer"
version = "0.1.0"
authors = ["meme <meme@users.noreply.github.com>"]
edition = "2018"
license = "wxWindows"
publish = false

[dependencies]
frida-gum = { path = "../../../frida-gum", features = ["event-sink", "invocation-listener", "stalker-observer", "stalker-params"] }
frida-gum-sys = { path = "../../../frida-gum-sys" }
lazy_static = "1.4"
